# vscode-bazel

./: .editorconfig  .gitignore  BUILD.bazel  WORKSPACE  macros.bzl  package.json  tsconfig.json
.bazelci/: presubmit.yml
src/bazel/: BUILD.bazel  bazel_command.ts  bazel_query.ts  bazel_quickpick.ts  bazel_task_info.ts  bazel_utils.ts  tasks.ts
src/buildifier/: BUILD.bazel  buildifier.ts  buildifier_availability.ts  buildifier_diagnostics_manager.ts  buildifier_format_provider.ts
src/codelens/: BUILD.bazel  bazel_build_code_lens_provider.ts
src/debug-adapter/: BUILD.bazel  client.ts  connection.ts  handles.ts
src/extension/: BUILD.bazel  configuration.ts  extension.ts
src/protos/: BUILD.bazel
src/symbols/: BUILD.bazel  bazel_target_symbol_provider.ts
src/workspace-tree/: BUILD.bazel  bazel_package_tree_item.ts  bazel_target_tree_item.ts  bazel_workspace_folder_tree_item.ts  bazel_workspace_tree_provider.ts  icons.ts
