load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "codelens",
    visibility = ["//visibility:public"],
    srcs = glob(["*.ts"]),
    deps = [
        "//src/bazel",
        "//src/protos",
        "//src/extension:configuration",
        "@npm//@types/node",
        "@npm//vscode",
    ],
)
