load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "debug-adapter",
    srcs = glob(["*.ts"]),
    deps = [
        "//src/protos",
        "@npm//@types/node",
        "@npm//vscode",
        "@npm//vscode-debugadapter",
        "@npm//vscode-debugprotocol",
        "@npm//protobufjs",
        "@npm//@types/long",
        "@npm//long",
    ],
)
