load("//:macros.bzl", "ts_library")

ts_library(
    name = "debug-adapter",
    visibility = ["//visibility:public"],
    srcs = glob(["*.ts"]),
    deps = [
        "//src/protos",
        "@npm//@types/node",
        "@npm//vscode",
        "@npm//vscode-debugadapter",
        "@npm//vscode-debugprotocol",
        "@npm//protobufjs",
        "@npm//@types/long",
        "@npm//long",
    ],
)
