load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "symbols",
    visibility = ["//visibility:public"],
    srcs = glob(["*.ts"]),
    deps = [
        "//src/protos",
        "//src/bazel",
        "//src/extension:configuration",
        "@npm//@types/node",
        "@npm//vscode",
    ],
)
